Margin added to callout to prevent text overflow

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -259,6 +259,7 @@ html body .index a:hover {
   background-color: $light-accent-0;
   border-radius: 5px;
   float: right;
+  margin-left: 15%;
   margin-right: 5%;
   margin-bottom: 40px;
   padding: 30px;
